src/test/ui/issues/10000-19999/issue-18423.stderr
error[E0107]: wrong number of lifetime arguments: expected 0, found 1
  --> $DIR/issue-18423.rs:4:12
   |
LL |     x: Box<'a, isize>
   |            ^^ unexpected lifetime argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
